[project]
name = "synnax-workspace"
version = "0.0.0"
description = "Synnax Python Workspace"
requires-python = ">=3.12,<4"

[dependency-groups]
dev = ["vermin>=1.8.0,<2"]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["alamos/py", "freighter/py", "client/py", "x/py", "integration"]

[tool.uv.sources]
alamos = { workspace = true }
synnax-freighter = { workspace = true }
synnax = { workspace = true }
x = { workspace = true }
