[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["emiliano bonilla <emilbon99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
freighter = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"