cc_library(
    name = "driver",
    srcs = ["config.cpp"],
    hdrs = ["config.h"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "@platforms//os:linux": ["-std=c++17"],
        "//conditions:default": [],
    }),
    deps = [
        "//client/cpp:synnax",
        "//driver/breaker",
        "//driver/config",
        "//driver/heartbeat",
        "//driver/ni",
        "//driver/opc",
        "//driver/sequence",
        "//driver/task",
        "@com_github_google_glog//:glog",
        "@nlohmann_json//:json",
    ] + select({
        "@platforms//os:windows": ["//driver/labjack"],
        "//conditions:default": [],
    }),
)

cc_test(
    name = "test_driver",
    size = "small",
    srcs = [
        "config_test.cpp",
        "task_context_test.cpp",
        "task_manager_test.cpp",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],
    }),
    deps = [
        "//driver",
        "//driver/testutil",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "driver_main",
    srcs = [
        "main.cpp",
        "//synnax/pkg/version",
    ],
    copts = select({
        # "@platforms//os:windows": [
        #    "/fsanitize=address",  # Enable AddressSanitizer for heap debugging
        #     "/ZI",                # Debug info
        #     "/DEBUG",             # Enable debug info
        #     "/MDd",               # Debug runtime
        #     "-std:c++20",
        # ],
        "//conditions:default": [
        ],
    }),
    linkopts = select({
        "@platforms//os:windows": [
            "/DEFAULTLIB:ws2_32.lib",
            "/DEFAULTLIB:iphlpapi.lib",
            "/DEFAULTLIB:psapi.lib",
            "/FORCE:MULTIPLE",  # FIXME: handles the current duplicate symbo,ls because of labjack lib. temp workaround
        ],
        "//conditions:default": [
            "-lm",
            "-ldl",
        ],
    }),
    deps = [
        "//driver",
        "//driver/breaker",
        "//driver/daemon",
        "//driver/meminfo",
        "//driver/ni",
        "//driver/opc",
        "//driver/sequence",
        "//driver/task",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
    ] + select({
        "@platforms//os:windows": [
            "//driver/labjack",
            "@mbedtls_win",
        ],
        "@platforms//os:linux": [
            "@mbedtls_linux",
        ],
        "@platforms//os:macos": [
            "@mbedtls_macos",
        ],
    }),
)
