[project]
name = "synnax-test-framework"
version = "0.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "synnax",
    "matplotlib>=3.10.8,<4",
    "numpy>=2.4.1,<3",
    "playwright>=1.57.0,<2",
    "pymodbus>=3.11.4,<4",
    "asyncua>=1.1.8,<2",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
test-conductor = "framework.test_conductor:main"
tc = "framework.test_conductor:main"

[tool.hatch.build.targets.wheel]
packages = ["driver", "framework", "tests"]

[tool.mypy]
mypy_path = "stubs"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "synnax.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_types = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
