[project]
name = "synnax-test-framework"
version = "0.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "synnax",
    "x",
    "flask>=3.1.3,<4",
    "matplotlib>=3.10.8,<4",
    "numpy>=2.4.3,<3",
    "playwright>=1.58.0,<2",
    "psutil>=7.2.2,<8",
    "pymodbus>=3.12.1,<4",
    "asyncua>=1.1.8,<2",
    "nidaqmx>=1.4.1,<2",
    "nisyscfg>=0.2.1,<1",
]
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "black>=26.3.1,<27",
    "isort>=8.0.1,<9",
    "mypy>=1.19.1,<2",
    "types-psutil>=7.2.2,<8",
]

[project.scripts]
test-conductor = "framework.test_conductor:main"
tc = "framework.test_conductor:main"

[tool.hatch.build.targets.wheel]
packages = ["driver", "framework", "tests"]

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "stubs"
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = "synnax.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nidaqmx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nisyscfg.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_types = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
