[project]
name = "alamos"
version = "0.50.0"
authors = [{ name = "Emiliano Bonilla", email = "ebonilla@synnaxlabs.com" }]
requires-python = ">=3.10,<4"
dependencies = [
    "opentelemetry-api>=1.39.1,<2",
    "opentelemetry-sdk>=1.39.1,<2",
    "pydantic>=2.12.5,<3",
    "uptrace>=1.39.0,<2",
]

[dependency-groups]
dev = ["black>=26.1.0,<27", "isort>=7.0.0,<8", "mypy>=1.19.1,<2", "pytest>=9.0.2,<10"]

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "stubs"
plugins = ["pydantic.mypy"]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_types = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
