[project]
name = "alamos"
version = "0.55.0"
authors = [{ name = "Emiliano Bonilla", email = "ebonilla@synnaxlabs.com" }]
requires-python = ">=3.12,<4"
dependencies = [
    "opentelemetry-api>=1.41.0,<2",
    "opentelemetry-sdk>=1.41.0,<2",
    "pydantic>=2.13.2,<3",
    "uptrace>=1.41.0,<2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1,<2",
    "ruff>=0.15.11,<1",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["alamos"]

[tool.mypy]
mypy_path = "stubs"
plugins = ["pydantic.mypy"]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_types = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
