cc_library(
    name = "synnax",
    srcs = [
        "transport.cpp",
    ],
    hdrs = [
        "synnax.h",
        "transport.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp/arc",
        "//client/cpp/auth",
        "//client/cpp/channel",
        "//client/cpp/device",
        "//client/cpp/framer",
        "//client/cpp/rack",
        "//client/cpp/ranger",
        "//client/cpp/status",
        "//core/pkg/api/grpc:api_grpc",
        "//freighter/cpp:freighter",
        "//freighter/cpp/fgrpc",
        "//x/cpp/json",
        "//x/cpp/log",
        "//x/cpp/path",
        "//x/cpp/telem",
        "@glog",
        "@grpc//:grpc++",
        "@nlohmann_json//:json",
    ],
)
