load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "synnax",
    srcs = [
        "transport.cpp",
    ],
    hdrs = [
        "synnax.h",
        "transport.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp/arc",
        "//client/cpp/auth",
        "//client/cpp/channel",
        "//client/cpp/device",
        "//client/cpp/framer",
        "//client/cpp/rack",
        "//client/cpp/ranger",
        "//client/cpp/status",
        "//core/pkg/api/grpc/v1:api_grpc",
        "//freighter/cpp:freighter",
        "//freighter/cpp/fgrpc",
        "//x/cpp/telem",
        "//x/cpp/xjson",
        "//x/cpp/xlog",
        "//x/cpp/xpath",
        "@glog",
        "@grpc//:grpc++",
        "@nlohmann_json//:json",
    ],
)
