cc_library(
    name = "synnax",
    srcs = [
        "transport.cpp",
    ],
    hdrs = [
        "synnax.h",
        "transport.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp/arc",
        "//client/cpp/auth",
        "//client/cpp/channel",
        "//client/cpp/device",
        "//client/cpp/framer",
        "//client/cpp/rack",
        "//client/cpp/ranger",
        "//client/cpp/status",
        "//core/pkg/api/grpc:api_grpc",
        "//freighter/cpp:freighter",
        "//freighter/cpp/grpc",
        "//core/pkg/api/grpc/v1:api_grpc",
        "//x/cpp/telem",
        "//x/cpp/json",
        "//x/cpp/log",
        "//x/cpp/path",
        "@glog//:glog",
        "@grpc//:grpc++",
        "@nlohmann_json//:json",
    ],
)
