[project]
name = "synnax"
version = "0.50.0"
description = "Synnax Client Library"
keywords = ["Synnax", "Synnax Python Client"]
authors = [{ name = "Emiliano Bonilla", email = "ebonilla@synnaxlabs.com" }]
requires-python = ">=3.12,<4"
dependencies = [
    "alamos",
    "synnax-freighter",
    "click>=8.3.1,<9",
    "keyring>=25.7.0,<26",
    "matplotlib>=3.10.8,<4",
    "nptdms>=1.10.0,<2",
    "numpy>=2.4.1,<3",
    "pandas>=3.0.0,<4",
    "pydantic>=2.12.5,<3",
    "rich>=14.3.1,<15",
    "urllib3>=2.6.3,<3",
]

[project.scripts]
sy = "synnax.cli.synnax:synnax"

[project.urls]
Homepage = "https://synnaxlabs.com"
Repository = "https://github.com/synnaxlabs/synnax"

[dependency-groups]
dev = [
    "asyncua>=1.1.8,<2; python_version < '3.14'",
    "black>=26.1.0,<27",
    "isort>=7.0.0,<8",
    "mypy>=1.19.1,<2",
    "pymodbus>=3.11.4,<4",
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "scipy>=1.17.0,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["synnax", "examples"]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_types = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
markers = [
    "access: mark test as an access test",
    "arc: mark test as an arc test",
    "auth: mark test as an auth test",
    "channel: mark test as a channel test",
    "cli: mark test as a cli test",
    "control: mark test as a control test",
    "device: mark test as a device test",
    "framer: mark test as a framer test",
    "frame_codec: mark test as a frame codec test",
    "iterator: mark test as a reader test",
    "internal: mark test as an internal test",
    "labjack: mark test as a labjack test",
    "io: mark test as an io test",
    "multi_node: mark test as a multi_node test",
    "modbus: mark test as a modbus test",
    "ni: mark test as a ni test",
    "ontology: mark test as an ontology test",
    "opcua: mark test as an opcua test",
    "rack: mark test as a rack test",
    "ranger: mark test as a ranger test",
    "role: mark test as a role test",
    "sequence: mark test as a sequence test",
    "series: mark test as a series test",
    "status: mark test as a status test",
    "task: mark test as a task test",
    "tdms: mark test as a tdms test",
    "telem: mark test as a telem test",
    "timing: mark test as a timing test",
    "tsconvert: mark test as a tsconvert test",
    "writer: mark test as a frame writer test",
    "streamer: mark test as a frame streamer test",
    "calculations: mark test as a calculated channels test",
    "delete: mark test as a data deletion test",
    "focus: marker to temporarily focus a test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
