[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
rand = "0.8.5"

[dependencies]
tauri = { version = "2.1.1", features = ["devtools"] }
tauri-plugin-store = "2.2.0"
tauri-plugin-deep-link = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-updater = "2.3.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-process = "2.2.0"
window-shadows = "0.2.2"
serde = "1.0.217"
serde_json = "1.0.134"
device_query = "2.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
