[package]
name = "app"
version = "0.43.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
rand = "0.9.1"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3.0", features = ["deep-link"] }

[dependencies]
device_query = "2.1.0"
serde = "1.0.219"
serde_json = "1.0.140"
tauri = { version = "2.6.2", features = ["devtools"] }
tauri-plugin-store = "2.3.0"
tauri-plugin-deep-link = "2.4.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-prevent-default = "2.1.2"
window-shadows = "0.2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
