[tool.poetry]
name = "deploy"
version = "0.1.0"
description = ""
authors = ["Henry Zhang <henry@superfocus.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
docker = "^6.1.3"


[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
