[tool.poetry]
name = "deploy"
version = "0.1.0"
description = ""
authors = ["Henry Zhang <henry@superfocus.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
