[project]
name = "deploy"
version = "0.1.0"
description = "Synnax deployment tools"
authors = [{ name = "Henry Zhang", email = "henry@superfocus.ai" }]
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0", "docker>=7.1.0"]

[dependency-groups]
dev = ["black>=24.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
