[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Emiliano Bonilla <56323762+emilbon99@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
synnax = { path = "../../client/py", develop = true }
nptdms = "^1.9.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
