cc_library(
    name = "arc",
    srcs = ["factory.cpp"],
    hdrs = [
        "arc.h",
        "task.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//arc/cpp/module",
        "//arc/cpp/runtime",
        "//arc/cpp/runtime/loop",
        "//client/cpp/arc",
        "//driver/common",
        "//driver/pipeline",
        "//driver/task",
        "//x/cpp/breaker",
        "//x/cpp/json",
        "//x/cpp/telem",
        "//x/cpp/uuid",
    ],
)

cc_test(
    name = "arc_test",
    srcs = ["arc_test.cpp"],
    deps = [
        "//client/cpp/testutil",
        "//driver/arc",
        "//driver/pipeline/mock",
        "//driver/task",
        "//x/cpp/defer",
        "//x/cpp/test",
        "@googletest//:gtest_main",
    ],
)
