cc_library(
    name = "breaker",
    hdrs = ["breaker.h"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//freighter/cpp:freighter",
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "breaker_test",
    size = "small",
    srcs = [
        "breaker_test.cpp",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],
    }),
    deps = [
        "//driver/breaker",
        "@com_google_googletest//:gtest_main",
    ],
)
