load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "bus",
    hdrs = [
        "authority.h",
        "bus.h",
        "factory.h",
        "streamer.h",
        "writer.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/pipeline",
        "//driver/task",
        "//x/cpp/control",
        "//x/cpp/telem",
    ],
)

cc_test(
    name = "bus_test",
    srcs = [
        "authority_test.cpp",
        "bus_test.cpp",
        "streamer_test.cpp",
        "writer_test.cpp",
    ],
    deps = [
        ":bus",
        "//driver/pipeline/mock",
        "@googletest//:gtest_main",
    ],
)
