load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "bypass",
    hdrs = [
        "authority.h",
        "bypass.h",
        "factory.h",
        "streamer.h",
        "writer.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/pipeline",
        "//driver/task",
        "//x/cpp/control",
        "//x/cpp/telem",
    ],
)

cc_binary(
    name = "bypass_bench",
    srcs = ["bypass_bench.cpp"],
    deps = [
        ":bypass",
        "//driver/pipeline/mock",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "bypass_test",
    srcs = [
        "authority_test.cpp",
        "bypass_test.cpp",
        "streamer_test.cpp",
        "writer_test.cpp",
    ],
    deps = [
        ":bypass",
        "//driver/pipeline/mock",
        "@googletest//:gtest_main",
    ],
)
