load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "bypass",
    hdrs = [
        "bypass.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//x/cpp/control",
        "//x/cpp/telem",
    ],
)

cc_binary(
    name = "bypass_bench",
    srcs = ["bypass_bench.cpp"],
    deps = [
        "//driver/bypass",
        "//driver/bypass/pipeline",
        "//driver/control",
        "//driver/pipeline/mock",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "bypass_test",
    srcs = [
        "bypass_test.cpp",
    ],
    deps = [
        "//driver/bypass",
        "//driver/pipeline/mock",
        "//x/cpp/test",
        "@googletest//:gtest_main",
    ],
)
